# castors

./: .cursorignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md
.agents/: setup.sh
.agents/cursor/agents/: architect.md  implemetor.md  quickfix.md  review.md  scurity.md
.agents/opencode/agents/: architect.md  implemetor.md  quickfix.md  review.md  scurity.md
.agents/skills/rust/: SKILL.md
.agents/skills/squid/: SKILL.md
.agents/skills/squid/docs/: quickstart.md
docs/: config.md  docker-backend.md  networking.md  plan.md  polishing.md  stages.md
src/: lib.rs  main.rs
src/cli/: add.rs  display.rs  exec.rs  infra.rs  list.rs  mitm.rs  mod.rs  prune.rs  restart.rs  rm.rs  test_helpers.rs
src/config/: identity.rs  load.rs  merge.rs  mod.rs  schema.rs
src/core/: domain.rs  mod.rs  paths.rs  registry.rs  state.rs
src/engine/: mod.rs  types.rs
src/engine/docker/: labels.rs  mod.rs  process.rs
src/engine/docker/castors/: cmd.rs  mod.rs  status.rs
src/engine/docker/infra/: cmd.rs  compose.yaml  mod.rs
src/engine/mock/: mod.rs
src/proxy/: mod.rs
src/proxy/mitm/: mod.rs  policy.py
src/proxy/squid/: mod.rs  squid.conf
templates/copencode-ca/: Dockerfile
templates/dummy-castor/: Dockerfile
templates/dummy-castor-ca/: Dockerfile
temprojects/copencode-mitm/.castors/: config.yaml
temprojects/dummy-mitm/.castors/: config.yaml  test.secret
temprojects/dummy-squid/.castors/: config.yaml
