[package]
name = "castors"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "~4.5", features = ["derive"] }
dirs = "6.0.0"
fs2 = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
yaml_serde = "0.10.4"

[dev-dependencies]
tempfile = "3.27.0"
